trying to fix the vh issue on mobile

--- a/src/components/ButtonActionable/ButtonActionable.styles.css
+++ b/src/components/ButtonActionable/ButtonActionable.styles.css
@@ -41,6 +41,6 @@
 @media screen and (min-width: 20em) {
   .button-actionable {
     font-size: 1rem;
-    min-height: var(--button-actionable-mobile-height);
+    height: var(--button-actionable-mobile-height);
   }
 }
